<resources>
    <string name="app_name">SneakerHunter</string>

    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="male_search_image">Male search</string>
    <string name="female_search_image">Female search</string>
    <string name="login">Login</string>
    <string name="enter_req">Найти..</string>
    <string name="search_str">Поиск</string>
    <string name="descending_str">По убыванию цены</string>
    <string name="ascending_str">По возрастанию цены</string>
    <string name="filters_str">Фильтры</string>
    <string name="google">Войти с помощью аккаунта Google</string>
    <string name="history">История</string>
    <string name="exit">Выйти</string>
    <string name="price_string">Цена</string>
    <string name="from_string">От</string>
    <string name="to_string">До</string>
    <string name="size_string">Размер</string>
    <string name="brand_string">Магазин</string>
    <string name="color_string">Цвет</string>
    <string name="accept_string">Применить</string>
    <string name="reset_string">Сбросить</string>
    <string name="brands_string">Бренд</string>
    <string name="favorites_string">Избранное</string>

    <string-array name="srt_array">
        <item>По убыванию</item>
        <item>По возрастанию</item>
    </string-array>
</resources>