<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.AppCompat.ActionBar.Solid">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FiltersFragment"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="100dp"
                android:textSize="20sp"
                android:layout_height="40dp"
                android:text="@string/price_string"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:inputType="number|none"
                android:maxLength="6"
                android:id="@+id/priceFromEditText"
                android:digits="0123456789"
                android:hint="@string/from_string"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:inputType="number|none"
                android:maxLength="6"
                android:id="@+id/priceToEditText"
                android:digits="0123456789"
                android:hint="@string/to_string"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="100dp"
                android:textSize="20sp"
                android:layout_height="40dp"
                android:text="@string/size_string"/>

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="100dp"
                android:textSize="20sp"
                android:layout_height="40dp"
                android:text="@string/brand_string"/>

            <Spinner
                android:id="@+id/brandSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="100dp"
                android:textSize="20sp"
                android:layout_height="40dp"
                android:text="@string/color_string"/>

            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:text="@string/accept_string"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>